--- a/professors/index.html
+++ b/professors/index.html
@@ -38,7 +38,7 @@
   <main class="container-fluid">
     <h1>Professores</h1>
     <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#form-professor" id="addbtn">
-      Adicioar Professor
+      Adicionar Professor
     </button>
     <div class="content-table">
       <table class="table table-secondary" hidden id="table">
