--- a/departments/index.html
+++ b/departments/index.html
@@ -40,7 +40,7 @@
     <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#form-department" id="addbtn">
       Adicionar Departamentos
     </button>
-    <div class="content-table">
+    <div class="table-responsive">
       <table class="table table-secondary" hidden id="table">
         <thead>
           <tr>
