--- a/professors/index.html
+++ b/professors/index.html
@@ -40,7 +40,7 @@
     <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#form-professor" id="addbtn">
       Adicionar Professor
     </button>
-    <div class="content-table">
+    <div class="table-responsive">
       <table class="table table-secondary" hidden id="table">
         <thead>
           <tr>
