--- a/courses/index.html
+++ b/courses/index.html
@@ -42,7 +42,7 @@
       >
       Adicionar Cursos
       </button>
-      <div class="table-responsive">
+      <div class="content-table">
         <table class="table table-secondary" hidden id="table">
           <thead>
             <tr>
