--- a/departments/index.html
+++ b/departments/index.html
@@ -35,12 +35,12 @@
     </nav>
   </header>
   <!-- Página Principal -->
-  <main class="container-fluid">
-    <h1>Departamentos</h1>
+  <main class="container-fluid main-content">
+    <h1 class="title">Departamentos</h1>
     <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#form-department" id="addbtn">
       Adicionar Departamentos
     </button>
-    <div class="table-responsive">
+    <div class="content-table">
       <table class="table table-secondary" hidden id="table">
         <thead>
           <tr>
