--- a/allocations/index.html
+++ b/allocations/index.html
@@ -40,7 +40,7 @@
     <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#form-allocation" id="addbtn">
       Adicioar Alocações
     </button>
-    <div class="table-responsive">
+    <div class="content-table">
       <table class="table table-secondary" hidden id="table">
         <thead>
           <tr>
