--- a/allocations/index.html
+++ b/allocations/index.html
@@ -36,7 +36,7 @@
   </header>
   <!-- Página Principal -->
   <main class="container-fluid">
-    <h1>Alocações</h1>
+    <h1 class="title">Alocações</h1>
     <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#form-allocation" id="addbtn">
       Adicioar Alocações
     </button>
