--- a/courses/index.html
+++ b/courses/index.html
@@ -32,7 +32,7 @@
     </header>
     <!-- Página Principal -->
     <main class="container-fluid">
-      <h1>Cursos</h1>
+      <h1 class="title">Cursos</h1>
       <button 
         type="button" 
         class="btn btn-dark" 
