--- a/departments/index.html
+++ b/departments/index.html
@@ -35,7 +35,7 @@
     </nav>
   </header>
   <!-- Página Principal -->
-  <main class="container-fluid main-content">
+  <main class="container-fluid">
     <h1 class="title">Departamentos</h1>
     <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#form-department" id="addbtn">
       Adicionar Departamentos
