--- a/professors/index.html
+++ b/professors/index.html
@@ -36,7 +36,7 @@
   </header>
   <!-- Página Principal -->
   <main class="container-fluid">
-    <h1>Professores</h1>
+    <h1 class="title">Professores</h1>
     <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#form-professor" id="addbtn">
       Adicionar Professor
     </button>
