--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </header>
     <!-- Página Principal -->
     <main class="container-fluid">
-      <h1>Página inicial</h1>
+      <h1 class="title">Página inicial</h1>
     </main>
     <!-- Rodapé -->
     <footer>
