--- a/allocations/index.html
+++ b/allocations/index.html
@@ -38,7 +38,7 @@
   <main class="container-fluid">
     <h1 class="title">Alocações</h1>
     <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#form-allocation" id="addbtn">
-      Adicioar Alocações
+      Adicionar Alocações
     </button>
     <div class="content-table">
       <table class="table table-secondary" hidden id="table">
